Estilos del main agregados

--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
                 <img src="css/img/1.png">
             </div>
             <div class="content">
-                <h1>Using Abstract</h1>
+                <h2>Using Abstract</h2>
                 <p>Abstract lets you manage, version, and document your designs in one place.</p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
         <div class="item">
@@ -58,9 +58,9 @@
                 <img src="css/img/2.png">
             </div>
             <div class="content">
-                <h1>UManage your account</h1>
+                <h2>Manage your account</h2>
                 <p>Configure your account settings, such as your email, profile details, and password.</p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
         <div class="item">
@@ -68,9 +68,9 @@
                 <img src="css/img/3.png">
             </div>
             <div class="content">
-                <h1>Manage organizations, teams, and projects</h1>
+                <h2>Manage organizations, teams, and projects</h2>
                 <p>Use Abstract organizations, teams, and projects to organize your people and your work.</p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
         <div class="item">
@@ -78,9 +78,9 @@
                 <img src="css/img/4.png">
             </div>
             <div class="content">
-                <h1>Manage billin</h1>
+                <h2>Manage billin</h2>
                 <p>Change subscriptions and payment details.</p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
         <div class="item">
@@ -88,11 +88,11 @@
                 <img src="css/img/5.png">
             </div>
             <div class="content">
-                <h1>Authenticate to Abstract</h1>
+                <h2>Authenticate to Abstract</h2>
                 <p>
                     Set up and configure SSO, SCIM, and Just-in-Time provisioning.
                 </p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
         <div class="item">
@@ -100,9 +100,9 @@
                 <img src="css/img/6.png">
             </div>
             <div class="content">
-                <h1>Abstract support</h1>
+                <h2>Abstract support</h2>
                 <p>Get in touch with a human.</p>
-                <a href="">Learn More →</a>
+                <a href="">Learn More <span>→</span></a>
             </div>
         </div>
     </main>
