--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         alt="Logo" class="logo">
                     <span></span>
                 </a>
-                
+
                 <a href="" class="element-2">Help Center</a>
             </div>
             <div class="element-container">
@@ -129,7 +129,7 @@
             <a href="">Dribbble</a>
             <a href="">Podcast</a>
         </div>
-        <div class="container">
+        <div class="container" id="plus">
             <h2>Company</h2>
             <a href="">About Us</a>
             <a href="">Careers</a>
@@ -140,29 +140,67 @@
                 <a href="">info@abstract.com</a>
             </div>
         </div>
+
         <div class="bottom">
-            <svg class="abstract-logo-footer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 51" preserveAspectRatio="xMinYMid slice">
+            <svg class="abstract-logo-footer" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 200 51"
+                preserveAspectRatio="xMinYMid slice">
                 <g class="abstract-logo-mark-footer" fill="#fff">
-                  <path d="M25.41 0C5.08 0 0 5.08 0 25.41s5.08 25.41 25.41 25.41 25.41-5.08 25.41-25.41S45.74 0 25.41 0zm-4.17 39.31A9.73 9.73 0 1 1 31 29.58a9.75 9.75 0 0 1-9.76 9.73zm17.67-.4h-4.77V16.67H11.91v-4.76h27z"></path>
-                  <circle cx="21.24" cy="29.58" r="4.96"></circle>
+                    <path
+                        d="M25.41 0C5.08 0 0 5.08 0 25.41s5.08 25.41 25.41 25.41 25.41-5.08 25.41-25.41S45.74 0 25.41 0zm-4.17 39.31A9.73 9.73 0 1 1 31 29.58a9.75 9.75 0 0 1-9.76 9.73zm17.67-.4h-4.77V16.67H11.91v-4.76h27z">
+                    </path>
+                    <circle cx="21.24" cy="29.58" r="4.96"></circle>
                 </g>
-              </svg>
+            </svg>
             <div>
                 <span>© Copyright 2023</span>
                 <span>Abstract Studio Design, Inc.</span>
                 <span>All rights reserved</span>
             </div>
         </div>
-
-        <div class="help">
-            <div class="icon">?</div>
-            <h2>Help</h2>
-        </div>
     </footer>
 
+    <button id="help">
+        <div class="icon">?</div>
+        <h2>Help</h2>
+    </button>
+
+    <!-- <div class="help-window">
+        <div class="help-window-header">
+            <h4>Abstract</h4>
+            <div id="close-window">|</div>
+        </div>
+        <div class="help-window-main">
+            <div class="container">
+                <div class="content">
+                    <div class="eyes"></div>
+                    <div class="eyes"></div>
+                </div>
+            </div>
+            <div class="message-container">
+                <div class="bot-message-container">
+                    <div class="bot-name">Abstract · Bot</div>
+                    <div class="bot-message">
+                        <span>Hi! Welcome to Abstract.</span>
+                        <span>Ask me a question and I'll find the answer for you.</span>
+                    </div>
+                </div>
+                <div class="user-message">
+                </div>
+                <div class="btn-option">
+                    <span>Get in touch</span>
+                </div>
+            </div>
+        </div>
+        <div class="help-window-footer">
+            <input type="text" name="text" id="text-of-help" placeholder="Type your question here..">
+        </div>
+    </div> -->
+
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
-<script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
+
+
 
 
 </html>
