--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
                         <span>Ask me a question and I'll find the answer for you.</span>
                     </div>
                 </div>
-                <div class="user-message">
+                <div class="user">
                 </div>
                 <div class="btn-option">
                     <span>Get in touch</span>
